Fix. Alignment buttons in articles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2694,7 +2694,8 @@ input, select, textarea {
 	}
 
 		ul.actions li {
-			padding: 0 0 0 1rem;
+			margin-bottom: 10px;
+			/* padding: 0 0 0 1rem; */
 			vertical-align: middle;
 		}
 
@@ -2704,6 +2705,7 @@ input, select, textarea {
 			-ms-justify-content: center;
 			justify-content: center;
 			width: 100%;
+			flex-wrap: wrap;
 			margin-left: 0;
 		}
 
